fix images path

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               이것들을 해결하려고, 우리는...
             </aside>            
           </section>
-          <section data-background="/images/baby.gif">
+          <section data-background="images/baby.gif">
             <h2 style="color: yellow">삽질...</h2>
           </section>
         </section>
@@ -107,7 +107,7 @@
           <h3>해결 방안은</h3>
           </br>
           <span class="fragment fade-up">
-          <img height="300" width="400" src="/images/docker_1200x1200.png"/>
+          <img height="300" width="400" src="images/docker_1200x1200.png"/>
           </span>
         </section>        
 
@@ -121,7 +121,7 @@
           </section>
           <section>
             <h4>일반 적인 가상 머신</h4>
-            <img height="500" width="650" src="/images/vm.png"/>
+            <img height="500" width="650" src="images/vm.png"/>
 
             <aside class="notes">
               보통 가상 머신은 HW를 대신하는 가상의 머신을 설치하고, 그 안에 게스트 OS를 설치하게 됩니다. <br/>
@@ -133,7 +133,7 @@
           </section>
           <section>
             <h4>Docker</h4>
-            <img height="500" width="650" src="/images/docker_a.png"/>
+            <img height="500" width="650" src="images/docker_a.png"/>
             <aside class="notes">
               Docker는 게스트 OS 없이 Linux에서 제공하는 LXC를 통해 가상화를 구현 합니다. 
               따라서, Docker는 가상 머신이라고 하지 않고 가상화 도구(툴)라고 불리웁니다.
@@ -141,7 +141,7 @@
           </section>
           <section>
             <h4>호스트 자원을 공유하여, 성능도 우수 합니다.</h4>
-            <img height="500" width="650" src="/images/docker_p.png"/>
+            <img height="500" width="650" src="images/docker_p.png"/>
           </section>
         </section>
 
