--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<<<<<<< HEAD
 <html lang="en">
 
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
     <title>개발자를 위한 Docker 개념잡기</title>
 
@@ -15,18 +15,18 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <link rel="stylesheet" href="css/reveal.css">
-    <link rel="stylesheet" href="css/theme/league.css" id="theme">
+    <link rel="stylesheet" href="dist/reveal.css">
+    <link rel="stylesheet" href="dist/theme/league.css" id="theme">
 
     <!-- Theme used for syntax highlighting of code -->
-    <link rel="stylesheet" href="lib/css/zenburn.css">
+    <link rel="stylesheet" href="plugin/highlight/zenburn.css">
 
     <!-- Printing and PDF exports -->
     <script>
       var link = document.createElement( 'link' );
       link.rel = 'stylesheet';
       link.type = 'text/css';
-      link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
+      //link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
       document.getElementsByTagName( 'head' )[0].appendChild( link );
     </script>
 
@@ -71,7 +71,7 @@
               이것들을 해결하려고, 우리는...
             </aside>            
           </section>
-          <section data-background="/images/baby.gif">
+          <section data-background="images/baby.gif">
             <h2 style="color: yellow">삽질...</h2>
           </section>
         </section>
@@ -108,7 +108,7 @@
           <h3>해결 방안은</h3>
           </br>
           <span class="fragment fade-up">
-          <img height="300" width="400" src="/images/docker_1200x1200.png"/>
+          <img height="300" width="400" src="images/docker_1200x1200.png"/>
           </span>
         </section>        
 
@@ -122,7 +122,7 @@
           </section>
           <section>
             <h4>일반 적인 가상 머신</h4>
-            <img height="500" width="650" src="/images/vm.png"/>
+            <img height="500" width="650" src="images/vm.png"/>
 
             <aside class="notes">
               보통 가상 머신은 HW를 대신하는 가상의 머신을 설치하고, 그 안에 게스트 OS를 설치하게 됩니다. <br/>
@@ -134,7 +134,7 @@
           </section>
           <section>
             <h4>Docker</h4>
-            <img height="500" width="650" src="/images/docker_a.png"/>
+            <img height="500" width="650" src="images/docker_a.png"/>
             <aside class="notes">
               Docker는 게스트 OS 없이 Linux에서 제공하는 LXC를 통해 가상화를 구현 합니다. 
               따라서, Docker는 가상 머신이라고 하지 않고 가상화 도구(툴)라고 불리웁니다.
@@ -142,7 +142,7 @@
           </section>
           <section>
             <h4>호스트 자원을 공유하여, 성능도 우수 합니다.</h4>
-            <img height="500" width="650" src="/images/docker_p.png"/>
+            <img height="500" width="650" src="images/docker_p.png"/>
           </section>
         </section>
 
@@ -457,9 +457,11 @@ mariadb-10.0                 2015-12-22 13:02:00 +0900 KST   Up 2 weeks</code></
 
     </div>
 
-    <script src="lib/js/head.min.js"></script>
-    <script src="js/reveal.js"></script>
-
+    <!--script src="lib/js/head.min.js"></script-->
+		<script src="dist/reveal.js"></script>
+		<script src="plugin/notes/notes.js"></script>
+		<script src="plugin/markdown/markdown.js"></script>
+		<script src="plugin/highlight/highlight.js"></script>
     <script>
 
       // More info https://github.com/hakimel/reveal.js#configuration
@@ -472,21 +474,20 @@ mariadb-10.0                 2015-12-22 13:02:00 +0900 KST   Up 2 weeks</code></
         transition: 'convex', // none/fade/slide/convex/concave/zoom
 
         // More info https://github.com/hakimel/reveal.js#dependencies
-        dependencies: [
-          { src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
-          { src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-          { src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-          { src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
-          { src: 'plugin/zoom-js/zoom.js', async: true },
-          { src: 'plugin/notes/notes.js', async: true }
-        ]
+        /*dependencies: [
+          { src: './lib/js/classList.js', condition: function() { return !document.body.classList; } },
+          { src: './plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+          { src: './plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+          { src: './plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+          { src: './plugin/zoom-js/zoom.js', async: true },
+          { src: './plugin/notes/notes.js', async: true }
+        ]*/
       });
 
     </script>
 
   </body>
-=======
-<html>
+<!--html>
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -497,7 +498,7 @@ mariadb-10.0                 2015-12-22 13:02:00 +0900 KST   Up 2 weeks</code></
 		<link rel="stylesheet" href="dist/reveal.css">
 		<link rel="stylesheet" href="dist/theme/black.css" id="theme">
 
-		<!-- Theme used for syntax highlighted code -->
+		
 		<link rel="stylesheet" href="plugin/highlight/monokai.css" id="highlight-theme">
 	</head>
 	<body>
@@ -523,6 +524,5 @@ mariadb-10.0                 2015-12-22 13:02:00 +0900 KST   Up 2 weeks</code></
 				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
 			});
 		</script>
-	</body>
->>>>>>> 0582f57517c97a4c7bfeb58762138c78883f94c5
+	</body -->
 </html>
